# AI-HW-4

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
artifacts/: GRAPH_REPORT.md  graph.html  graph.json
config/: logging_config.json  rate_limits.json  setup.json
docs/: FINAL_CHECKLIST.md  PLAN.md  PRD.md  PRD_debug_agent.md  PRD_gatekeeper.md  PRD_graphify.md  PRD_token_benchmark.md  PROMPTS.md  RESEARCH_QUESTIONS.md  TODO.md
notebooks/: token_analysis.ipynb
obsidian/wiki/: __main___py.md  cookiecutter___init___py.md  cookiecutter___main___py.md  cookiecutter_cli_py.md  cookiecutter_cli_py__main.md  cookiecutter_cli_py__validate_extra_context.md  cookiecutter_cli_py__version_msg.md  cookiecutter_config_py.md  cookiecutter_config_py___expand_path.md  cookiecutter_config_py__get_config.md  cookiecutter_config_py__get_user_config.md  cookiecutter_config_py__merge_configs.md  cookiecutter_environment_py.md  cookiecutter_environment_py__ExtensionLoaderMixin.md  cookiecutter_environment_py__StrictEnvironment.md  cookiecutter_environment_py____init__.md  cookiecutter_environment_py___read_extensions.md  cookiecutter_exceptions_py.md  cookiecutter_exceptions_py__ConfigDoesNotExistException.md  cookiecutter_exceptions_py__ContextDecodingException.md  cookiecutter_exceptions_py__CookiecutterException.md  cookiecutter_exceptions_py__FailedHookException.md  cookiecutter_exceptions_py__InvalidConfiguration.md  cookiecutter_exceptions_py__InvalidModeException.md  cookiecutter_exceptions_py__InvalidZipRepository.md  cookiecutter_exceptions_py__MissingProjectDir.md  cookiecutter_exceptions_py__NonTemplatedInputDirException.md  cookiecutter_exceptions_py__OutputDirExistsException.md  cookiecutter_exceptions_py__RepositoryCloneFailed.md  cookiecutter_exceptions_py__RepositoryNotFound.md  cookiecutter_exceptions_py__UndefinedVariableInTemplate.md  cookiecutter_exceptions_py__UnknownExtension.md  cookiecutter_extensions_py.md  (+423 more)
reports/: BUG_REPORT.md  REVERSE_ENGINEERING.md  TOKEN_REPORT.md
results/: benchmark.json  benchmark_runs.json  debug_run.json
tests/: conftest.py
(+62 files in other folders)
